<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".ImageActivity">

    <Button
        android:id="@+id/tagButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:onClick="initTagDialog"
        android:text="@string/edit_labels"
        app:layout_constraintBottom_toTopOf="@+id/scrollview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.146" />

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toTopOf="parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/metadata_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp">

                <TextView
                    android:id="@+id/lab_filename"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/filename"
                    android:textColor="@color/colorTextMedium" />

                <TextView
                    android:id="@+id/filename"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textColor="@color/colorTextLight" />

                <TextView
                    android:id="@+id/lab_dir"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dir"
                    android:textColor="@color/colorTextMedium" />

                <TextView
                    android:id="@+id/dir"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textColor="@color/colorTextLight" />

                <TextView
                    android:id="@+id/lab_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/type"
                    android:textColor="@color/colorTextMedium" />

                <TextView
                    android:id="@+id/type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textColor="@color/colorTextLight" />
                <TextView
                    android:id="@+id/lab_size"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/size"
                    android:textColor="@color/colorTextMedium" />

                <TextView
                    android:id="@+id/size"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textColor="@color/colorTextLight" />

                <TextView
                    android:id="@+id/lab_createdon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/imagedate"
                    android:textColor="@color/colorTextMedium" />

                <TextView
                    android:id="@+id/createdon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textColor="@color/colorTextLight" />

                <TextView
                    android:id="@+id/lab_imgdim"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/imgdim"
                    android:textColor="@color/colorTextMedium" />

                <TextView
                    android:id="@+id/imgdim"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textColor="@color/colorTextLight" />

                <TextView
                    android:id="@+id/lab_focallen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/focallen"
                    android:textColor="@color/colorTextMedium" />

                <TextView
                    android:id="@+id/focallen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textColor="@color/colorTextLight" />

                <TextView
                    android:id="@+id/lab_shutter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/shutter"
                    android:textColor="@color/colorTextMedium" />

                <TextView
                    android:id="@+id/shutter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textColor="@color/colorTextLight" />

                <TextView
                    android:id="@+id/lab_fnum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fnum"
                    android:textColor="@color/colorTextMedium" />

                <TextView
                    android:id="@+id/fnum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textColor="@color/colorTextLight" />

                <TextView
                    android:id="@+id/lab_iso"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/iso"
                    android:textColor="@color/colorTextMedium" />

                <TextView
                    android:id="@+id/iso"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textColor="@color/colorTextLight" />

                <TextView
                    android:id="@+id/lab_gps"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gps"
                    android:textColor="@color/colorTextMedium" />

                <TextView
                    android:id="@+id/gps"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textColor="@color/colorTextLight" />

                <TextView
                    android:id="@+id/lab_tag"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tag"
                    android:textColor="@color/colorTextMedium" />

                <TextView
                    android:id="@+id/tag"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textColor="@color/colorTextLight" />

                <TextView
                    android:id="@+id/lab_download"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/download"
                    android:textColor="@color/colorTextMedium" />

                <TextView
                    android:id="@+id/download"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textColor="@color/colorTextLight"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>